Upgrade to java11 and remove guava