@@ -2,9 +2,6 @@ package io.liquorice.config.test.support;
 
 import java.util.List;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.Lists;
-
 /**
  * Created by mthorpe on 12/13/16.
  */
@@ -23,21 +20,21 @@ public final class ConfigSpaceTestData {
     public static final int INT_VALUE = 7;
     public static final long LONG_VALUE = 17L;
     public static final String STRING_VALUE = "test string";
-    public static final List<String> COMPLEX_VALUE = ImmutableList.of(BOOL_KEY, DOUBLE_KEY);
+    public static final List<String> COMPLEX_VALUE = List.of(BOOL_KEY, DOUBLE_KEY);
 
     public static final boolean DEFAULT_BOOL_VALUE = false;
     public static final double DEFAULT_DOUBLE_VALUE = 2.4;
     public static final int DEFAULT_INT_VALUE = 18;
     public static final long DEFAULT_LONG_VALUE = 24L;
     public static final String DEFAULT_STRING_VALUE = "default test value";
-    public static final List<String> DEFAULT_COMPLEX_VALUE = ImmutableList.of(INT_KEY, LONG_KEY);
+    public static final List<String> DEFAULT_COMPLEX_VALUE = List.of(INT_KEY, LONG_KEY);
 
     public static final boolean UPDATED_BOOL_VALUE = false;
     public static final double UPDATED_DOUBLE_VALUE = 14.5;
     public static final int UPDATED_INT_VALUE = 9;
     public static final long UPDATED_LONG_VALUE = 31L;
     public static final String UPDATED_STRING_VALUE = "updated string";
-    public static final List<String> UPDATED_COMPLEX_VALUE = ImmutableList.of(INT_KEY, STRING_KEY);
+    public static final List<String> UPDATED_COMPLEX_VALUE = List.of(INT_KEY, STRING_KEY);
 
     public static final String JSON_STRING = "{" + //
             String.format("\"%s\":%s,", BOOL_KEY, Boolean.toString(BOOL_VALUE)) + //
